trying to fix menu button alignment but nothing works

--- a/SearchResults.css
+++ b/SearchResults.css
@@ -22,8 +22,12 @@ body {
     width: 50px;
 }
 
-.profile-button button {
+/* .profile-button button {
     border: 0;
     background: transparent;
+    float: left;
+} */
+
+.sidenav {
     float: left;
 }
